<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/profile"
        android:icon="@drawable/user"
        android:title="@string/profile" />

    <item
        android:id="@+id/bookedRoom"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/bookedRoom" />

    <item
        android:id="@+id/orderRoom"
        android:icon="@drawable/orders"
        android:title="@string/orderRoom" />

    <item
        android:id="@+id/procedures"
        android:icon="@drawable/procedure"
        android:title="@string/procedure" />

    <item
        android:id="@+id/boughtProcedures"
        android:icon="@drawable/orders"
        android:title="@string/boughtProcedures" />

    <item android:title="@string/others">

        <menu>

            <item
                android:id="@+id/info"
                android:icon="@drawable/info"
                android:title="@string/about" />

            <item
                android:id="@+id/settings"
                android:icon="@drawable/settings"
                android:title="@string/settings" />

        </menu>

    </item>

</menu>